--- a/LisansProjectQT/openglview.ui
+++ b/LisansProjectQT/openglview.ui
@@ -3,14 +3,14 @@
  <class>openGlView</class>
  <widget class="QDialog" name="openGlView">
   <property name="windowModality">
-   <enum>Qt::WindowModal</enum>
+   <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>800</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,10 +22,10 @@
   <widget class="OpenGlWidget" name="openGLWidget">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>381</width>
-     <height>281</height>
+     <x>-1</x>
+     <y>-1</y>
+     <width>801</width>
+     <height>400</height>
     </rect>
    </property>
   </widget>
